--- a/CryptoSphere/CryptoSphere/Info.plist
+++ b/CryptoSphere/CryptoSphere/Info.plist
@@ -21,5 +21,18 @@
 			</array>
 		</dict>
 	</dict>
+    
+    <key>GIDClientID</key>
+    <string>670999128053-fh4n0s3lub1rnvhfs9gukv0aueigiiab.apps.googleusercontent.com</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>com.googleusercontent.apps.670999128053-fh4n0s3lub1rnvhfs9gukv0aueigiiab</string>
+        </array>
+      </dict>
+    </array>
+    
 </dict>
 </plist>
