--- a/CryptoSphere/CryptoSphere/Info.plist
+++ b/CryptoSphere/CryptoSphere/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Zoho Puvi Light.ttf</string>
+        <string>Zoho Puvi Medium.ttf</string>
+        <string>Zoho Puvi Bold.ttf</string>
+        
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -21,18 +28,16 @@
 			</array>
 		</dict>
 	</dict>
-    
-    <key>GIDClientID</key>
-    <string>670999128053-fh4n0s3lub1rnvhfs9gukv0aueigiiab.apps.googleusercontent.com</string>
-    <key>CFBundleURLTypes</key>
-    <array>
-      <dict>
-        <key>CFBundleURLSchemes</key>
-        <array>
-          <string>com.googleusercontent.apps.670999128053-fh4n0s3lub1rnvhfs9gukv0aueigiiab</string>
-        </array>
-      </dict>
-    </array>
-    
+	<key>GIDClientID</key>
+	<string>670999128053-fh4n0s3lub1rnvhfs9gukv0aueigiiab.apps.googleusercontent.com</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.670999128053-fh4n0s3lub1rnvhfs9gukv0aueigiiab</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
